[gd_scene load_steps=5 format=3 uid="uid://dmmdoix2044ef"]

[ext_resource type="Script" uid="uid://cygojaswliwkw" path="res://Scripts/battle.gd" id="1_vr6xi"]
[ext_resource type="Script" uid="uid://dn06jxngyerns" path="res://Scripts/action_panel.gd" id="2_vr6xi"]
[ext_resource type="PackedScene" uid="uid://fkg7ej6bbeno" path="res://Scenes/PartyHUD.tscn" id="3_2h7oj"]
[ext_resource type="PackedScene" uid="uid://ckjklqlt5u6is" path="res://Scenes/qte_bar.tscn" id="4_1samx"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_vr6xi")

[node name="Battlefield" type="Node2D" parent="."]

[node name="HeroPositions" type="Node2D" parent="Battlefield"]
position = Vector2(200, 130)
scale = Vector2(2, 3.5)

[node name="Slot1" type="Marker2D" parent="Battlefield/HeroPositions"]
scale = Vector2(0.75, 0.4)

[node name="Slot2" type="Marker2D" parent="Battlefield/HeroPositions"]
position = Vector2(40, 80)
scale = Vector2(0.75, 0.4)

[node name="Slot3" type="Marker2D" parent="Battlefield/HeroPositions"]
position = Vector2(0, 160)
scale = Vector2(0.75, 0.4)

[node name="EnemyPositions" type="Node2D" parent="Battlefield"]
position = Vector2(1400, 130)
scale = Vector2(2, 3.5)

[node name="Slot1" type="Marker2D" parent="Battlefield/EnemyPositions"]
scale = Vector2(-0.75, 0.4)

[node name="Slot2" type="Marker2D" parent="Battlefield/EnemyPositions"]
position = Vector2(-40, 80)
scale = Vector2(-0.75, 0.4)

[node name="Slot3" type="Marker2D" parent="Battlefield/EnemyPositions"]
position = Vector2(0, 160)
scale = Vector2(-0.75, 0.4)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="TurnQueuePanel" type="Panel" parent="UI/TopUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 44.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionPanel" type="PanelContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_vr6xi")

[node name="MainMenuContainer" type="VBoxContainer" parent="UI/ActionPanel"]
layout_mode = 2

[node name="AttackButton" type="Button" parent="UI/ActionPanel/MainMenuContainer"]
layout_mode = 2
text = "Атака"

[node name="SkillButton" type="Button" parent="UI/ActionPanel/MainMenuContainer"]
layout_mode = 2
text = "Умения"

[node name="ItemButton" type="Button" parent="UI/ActionPanel/MainMenuContainer"]
layout_mode = 2
text = "Предметы"

[node name="SkipButton" type="Button" parent="UI/ActionPanel/MainMenuContainer"]
layout_mode = 2
text = "Пропуск"

[node name="SkillMenuContainer" type="VBoxContainer" parent="UI/ActionPanel"]
layout_mode = 2

[node name="SkillButton1" type="Button" parent="UI/ActionPanel/SkillMenuContainer"]
layout_mode = 2

[node name="SkillButton2" type="Button" parent="UI/ActionPanel/SkillMenuContainer"]
layout_mode = 2

[node name="SkillButton3" type="Button" parent="UI/ActionPanel/SkillMenuContainer"]
layout_mode = 2

[node name="SkillButton4" type="Button" parent="UI/ActionPanel/SkillMenuContainer"]
layout_mode = 2

[node name="SkillButton5" type="Button" parent="UI/ActionPanel/SkillMenuContainer"]
layout_mode = 2

[node name="SkillButton6" type="Button" parent="UI/ActionPanel/SkillMenuContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/ActionPanel/SkillMenuContainer"]
layout_mode = 2
text = "Назад"

[node name="ItemMenuContainer" type="VBoxContainer" parent="UI/ActionPanel"]
layout_mode = 2

[node name="ItemButton1" type="Button" parent="UI/ActionPanel/ItemMenuContainer"]
layout_mode = 2

[node name="ItemButton2" type="Button" parent="UI/ActionPanel/ItemMenuContainer"]
layout_mode = 2

[node name="ItemButton3" type="Button" parent="UI/ActionPanel/ItemMenuContainer"]
layout_mode = 2

[node name="BackButton2" type="Button" parent="UI/ActionPanel/ItemMenuContainer"]
layout_mode = 2
text = "Назад"

[node name="WorldUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PartyHUD" parent="UI" instance=ExtResource("3_2h7oj")]

[node name="QTEBar" parent="UI" instance=ExtResource("4_1samx")]
anchors_preset = 15
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="UI/ActionPanel/MainMenuContainer/AttackButton" to="UI/ActionPanel" method="_on_AttackButton_pressed"]
[connection signal="button_down" from="UI/ActionPanel/MainMenuContainer/SkillButton" to="UI/ActionPanel" method="_on_SkillButton_pressed"]
[connection signal="button_down" from="UI/ActionPanel/MainMenuContainer/ItemButton" to="UI/ActionPanel" method="_on_ItemButton_pressed"]
[connection signal="button_down" from="UI/ActionPanel/MainMenuContainer/SkipButton" to="UI/ActionPanel" method="_on_SkipButton_pressed"]
[connection signal="button_down" from="UI/ActionPanel/SkillMenuContainer/BackButton" to="UI/ActionPanel" method="_on_BackButton_pressed"]
[connection signal="button_down" from="UI/ActionPanel/ItemMenuContainer/BackButton2" to="UI/ActionPanel" method="_on_BackButton2_pressed"]
